--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@
             color: rgb(0, 0, 0);
             padding-left: 26px;
         }
+        .li5 {
+            float:left;
+            display:block; 
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;  
+            color: rgb(90, 90, 90);
+            background-color: rgb(240, 240, 240);
+        }
         #apps {
             color: rgb(90, 90, 90);
             border-bottom-left-radius: 2px;
@@ -192,8 +201,8 @@
         </div>
         <div>
             <ul class="ul4">
-                <li>Google Search</li>
-                <li>I'm Feeling Lucky</li>
+                <li class="li5">Google Search</li>
+                <li class="li5">I'm Feeling Lucky</li>
             </ul>
         </div>
         <div>
