--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
         }
         .ul4 {
             list-style-type: none;
-            padding: 0px;
+            padding-left: 877px;
+            padding-right: auto;
             height: 40px;
             width: 2025px;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 16px;
+            font-size: 14px;
             position:fixed;
             align-items: center; 
         }
@@ -109,6 +110,17 @@
             text-decoration: none;  
             color: rgb(90, 90, 90);
             background-color: rgb(240, 240, 240);
+            padding-top: 10px;
+            padding-right: 12px;
+            padding-left: 12px;
+            padding-bottom: 10px;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-top-left-radius: 4px;
+            border-top-right-radius: 4px;
+            border-width: 1px;
+            border-color: rgb(242, 242, 242);
+            margin-right: 10px;
         }
         #apps {
             color: rgb(90, 90, 90);
@@ -160,6 +172,9 @@
             text-decoration: underline;
         }
         .li2:hover{
+            text-decoration: underline;
+        }
+        .li3:hover {
             text-decoration: underline;
         }
         .li4:hover {
