--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             display: block;
             margin-left: auto;
             margin-right:auto;
-            padding-top: 109px;
+            padding-top: 200px;
         }
         #ash {
             border-radius: 50%;
@@ -21,8 +21,7 @@
         }
         .ul1 {
             list-style-type: none;
-            margin-top: 850px;
-            margin-right: 500px;
+            margin-top: 774px;
             padding: 0px;
             height: 40px;
             width: 2025px;
@@ -30,7 +29,8 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 14px;
             position:fixed;
-            align-items: center; 
+            align-items: center;
+            border: 1px, solid, gray; 
         }  
         .ul2 {
             list-style-type: none;
@@ -46,18 +46,6 @@
             
         }
         .ul3 {
-            list-style-type: none;
-            margin-top: 0px;
-            margin-bottom: 0px;
-            padding: 0px;
-            height: 40px;
-            width: 2025px;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 14px;
-            position:fixed;
-            align-items: center;  
-        }
-        .ul4 {
             list-style-type: none;
             padding-left: 877px;
             padding-right: auto;
@@ -106,9 +94,8 @@
             float:left;
             display:block; 
             text-align: center;
-            padding: 14px 16px;
             text-decoration: none;  
-            color: rgb(90, 90, 90);
+            color: rgb(32, 32, 32);
             background-color: rgb(240, 240, 240);
             padding-top: 10px;
             padding-right: 12px;
@@ -162,11 +149,11 @@
             display: flex;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 60px;
+            margin-top: 45px;
             border-width: 1px;
         }
         .div1:hover{
-            box-shadow: 0 0 3px rgb(134, 134, 134);
+            box-shadow: 0 0 5px rgb(173, 173, 173), 0 0 6px whitesmoke;
         }
         .li1:hover {
             text-decoration: underline;
@@ -197,7 +184,7 @@
           <li class="li3">About</li> 
           <li class="li3">Store</li>
         </ul>
-        <ul class="ul3">
+        <ul class="ul2">
           <li class="li4"><img alt="Ashie-Pie" id="ash" src="https://lh3.googleusercontent.com/ogw/ADea4I4E3qjwdRMDiS-Jf_IJOVeddDq8qmJWWrDjxvDv=s64-c-mo"</li>
           <li class="li4"><span id="apps" class="material-icons">
             apps
@@ -215,7 +202,7 @@
             <img id="mic" alt="google mic" src="https://i.pinimg.com/originals/ea/5f/5b/ea5f5bd3b4110f2afb958049b4096d3a.png">
         </div>
         <div>
-            <ul class="ul4">
+            <ul class="ul3">
                 <li class="li5">Google Search</li>
                 <li class="li5">I'm Feeling Lucky</li>
             </ul>
